--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "serve": "nodemon index.js",
     "seed": "node ./seeds/index.js"
   },
   "keywords": [],
