--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-seed": "^0.6.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
   "name": "backend",
@@ -14,8 +16,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js",
-    "seed": "node ./seeds/index.js"
+    "serve": "nodemon app.js",
+    "seed": "node seeder.js"
   },
   "keywords": [],
   "author": "",
