--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "mongoose-data-seed": "^2.1.6",
     "mongoose-seed": "^0.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
@@ -17,7 +18,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon app.js",
-    "seed": "node seeder.js"
+    "seed": "node ./seeder/seeder",
+    "seed:destroy": "node ./seeder/seeder -d"
   },
   "keywords": [],
   "author": "",
