--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-modal-success": "^1.1.0",
     "react-router-dom": "^6.21.1"
   },
