--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "mongoose-data-seed": "^2.1.6",
     "mongoose-seed": "^0.6.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   },
   "name": "backend",
   "version": "1.0.0",
