--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,10 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal-success": "^1.1.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.8",
+    "styled-icons": "^10.47.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
