--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-modal-success": "^1.1.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.7.5",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.8",
     "styled-icons": "^10.47.1"
@@ -30,7 +31,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.23",
+    "daisyui": "^4.10.3",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
