--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
