--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "socket.io-client": "^4.7.5",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.8",
-    "styled-icons": "^10.47.1"
+    "styled-icons": "^10.47.1",
+    "sweetalert2": "^11.12.3",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
