--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon app.js",
+    "serve": "nodemon index.js",
     "seed": "node ./seeder/seeder",
     "seed:destroy": "node ./seeder/seeder -d"
   },
