--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 VITE_APIURL = "http://localhost:8000/api"
+# VITE_APIURL = "https://api-kudapan-app.vercel.app/api"
+
 VITE_BASE_URL = "http://localhost:5173"
 VITE_IMGURL = "http://localhost:8000/images"
+# VITE_IMGURL = "https://api-kudapan-app.vercel.app/images"
