--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon index.js",
+    "start": "node index.js",
     "seed": "node ./seeder/seeder",
     "seed:destroy": "node ./seeder/seeder -d"
   },
