try host vercel

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,9 +1,9 @@
-# VITE_APIURL = "http://localhost:8000/api"
-VITE_APIURL = "https://api.kudapan-unhas.my.id/api"
+VITE_APIURL = "http://localhost:8000/api"
+# VITE_APIURL = "https://api.kudapan-unhas.my.id/api"
 # VITE_APIURL = "https://api-kudapan-app.vercel.app/api"
 
 VITE_BASEURL = "https://kudapan-unhas.shop"
 # VITE_BASEURL = "http://localhost:5173"
-# VITE_IMGURL = "http://localhost:8000/images"
-VITE_IMGURL = "https://api.kudapan-unhas.my.id/images"
+VITE_IMGURL = "http://localhost:8000/images"
+# VITE_IMGURL = "https://api.kudapan-unhas.my.id/images"
 # VITE_IMGURL = "https://api-kudapan-app.vercel.app/images"
