--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,8 @@
 {
     "version": 2,
+    "rewrites": [
+    { "source": "/images/(.*)", "destination": "/api" }
+  ],
     "builds": [
         {
             "src": "./index.js",
@@ -11,4 +14,5 @@
             "dest": "/"
         }
     ]
+    
 }
