change images pathasdas

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,6 +11,6 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ],
-  "rewrites": [{ "source": "/images/(.*)", "destination": "/api" }]
+  ]
+  // "rewrites": [{ "source": "/images/(.*)", "destination": "/api" }]
 }
